# iiwa-ForceControl

./: .gitignore  CMakeLists.txt  README.md
00-passivity_tests/: CMakeLists.txt  controller_main.cpp  kuka_iiwa.urdf  simulation_main.cpp  visualizer_main.cpp  world.urdf
00-passivity_tests/data_viz/: data_logger.py  data_plotter.py
00-test_base_primitive/: CMakeLists.txt  app.cpp  kuka_iiwa.urdf  world.urdf
01-force_tracking/: CMakeLists.txt  controller_main.cpp  simulation_main.cpp  visualizer_main.cpp  world.urdf
01-force_tracking/data_logger/: data_logger.py  data_plotter.py
02-demo_cs225a/: CMakeLists.txt  controller_main.cpp  simulation_main.cpp  visualizer_main.cpp  world.urdf
03-multi_contact_validation/: CMakeLists.txt  controller_main.cpp  kuka_iiwa_floating_base.urdf  simulation_main.cpp  visualizer_main.cpp  world.urdf
04-passivity_demo/: CMakeLists.txt  controller_main.cpp  simulation_main.cpp  visualizer_main.cpp  world.urdf
04-passivity_demo/data_viz/: data_logger.py  data_plotter.py
04-passivity_demo_square_ee/: CMakeLists.txt  controller.cpp  kuka_iiwa.urdf  plate.urdf  simviz.cpp  world.urdf
04-passivity_demo_square_ee/data_viz/: data_logger.py  data_plotter.py
05-contact_primitives/: CMakeLists.txt  app.cpp  kuka_iiwa.urdf  world.urdf
06-contact_observer/: CMakeLists.txt  controller.cpp  kuka_iiwa.urdf  sim_viz.cpp  world.urdf
07-haptic_demo/: CMakeLists.txt  controller.cpp  iiwa7_haptic_demo.urdf  simviz.cpp  world.urdf
08-surface_alignment/: CMakeLists.txt  controller.cpp  cube_calibration.xml  sensor_bias.xml  simviz.cpp  world.urdf
09-hand_surface_alignment/: CMakeLists.txt  allegro_hand_calibration.xml  allegro_hand_plus_cube_calibration.xml  controller.cpp  sensor_bias.xml  simviz.cpp  world.urdf
09-hand_surface_alignment/data_viz/: data_logger.py  data_plotter.py
09-hand_surface_alignment/data_viz/debug_robot/: 03-19-18_13-18-58_force.txt  03-19-18_13-28-04_force.txt  03-19-18_13-29-15_force.txt  03-19-18_14-10-13_force.txt
10-antenna_experiments/: CMakeLists.txt  controller.cpp  iiwa7.urdf  interface.html  simviz.cpp  world.urdf
robot_models/kuka_iiwa/: kuka_iiwa.urdf  kuka_iiwa_force_sensor.urdf
robot_models/kuka_iiwa/01-force_tracking/: kuka_iiwa_force_sensor.urdf
robot_models/kuka_iiwa/02-demo_cs225a/: kuka_iiwa.urdf
robot_models/kuka_iiwa/03-multi_contact_validation/: kuka_iiwa_base_sensor.urdf
robot_models/kuka_iiwa/04-passivity_demo/: kuka_iiwa_ee_sensor.urdf
src/local_tasks/: OrientationTask.h  PosOriTask.cpp  PosOriTask.h  TestTask.h
src/momentum_observer/: MomentumObserver.h
src/redis/: RedisClient.h
src/tasks/: BasePrimitive.h  HybridPositionTask.h  OrientationTask.h  PosOriTask.cpp  PosOriTask.h  TestTask.h
src/timer/: LoopTimer.cpp  LoopTimer.h
util-fsensor_calibration/: CMakeLists.txt  bias_calibration.cpp  calibration_routine.cpp  iiwa7.urdf  object_calibration.cpp  simviz.cpp  world.urdf
